--- a/githome/css/reset.css
+++ b/githome/css/reset.css
@@ -1,262 +1,268 @@
 @font-face {
-    font-family: "FontAwesome";
-    src: url("../fonts/FontAwesome.eot?#iefix") format("embedded-opentype"),
-      url("../fonts/FontAwesome.otf") format("opentype"),
-      url("../fonts/FontAwesome.woff") format("woff"),
-      url("../fonts/FontAwesome.woff2") format("woff2"),
-      url("../fonts/FontAwesome.ttf") format("truetype"),
-      url("../fonts/FontAwesome.svg#FontAwesome") format("svg");
-    font-weight: normal;
-    font-style: normal;
-  }
-  html,
-  body,
-  div,
-  span,
-  applet,
-  object,
-  iframe,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  blockquote,
-  pre,
-  a,
-  abbr,
-  acronym,
-  address,
-  big,
-  cite,
-  code,
-  del,
-  dfn,
-  em,
-  img,
-  ins,
-  kbd,
-  q,
-  s,
-  samp,
-  small,
-  strike,
-  strong,
-  tt,
-  var,
-  u,
-  i,
-  center,
-  dl,
-  dt,
-  dd,
-  ol,
-  ul,
-  li,
-  fieldset,
-  form,
-  label,
-  legend,
-  table,
-  caption,
-  tbody,
-  tfoot,
-  thead,
-  tr,
-  th,
-  td,
-  article,
-  aside,
-  canvas,
-  details,
-  embed,
-  figure,
-  figcaption,
-  footer,
-  header,
-  hgroup,
-  menu,
-  nav,
-  output,
-  ruby,
-  section,
-  summary,
-  time,
-  mark,
-  audio,
-  video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-  }
-  html {
-    height: 100%;
-  }
-  body {
-    height: 100%;
-    font: 14px/18px Arial, Tahoma, sans-serif;
-    background: #fff;
-  }
-  ol,
-  ul {
-    list-style: none;
-  }
-  * {
-    margin: 0;
-    padding: 0;
-    outline: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  a,
-  a:hover {
-    text-decoration: none;
-  }
-  .clearfix:before,
-  .clearfix:after {
-    content: " ";
-    display: table;
-  }
-  .clearfix:after {
-    clear: both;
-  }
-  ::-webkit-input-placeholder {
-    color: #666;
-    opacity: 1;
-  }
-  :-moz-placeholder {
-    color: #666;
-    opacity: 1;
-  }
-  ::-moz-placeholder {
-    color: #666;
-    opacity: 1;
-  }
-  :-ms-input-placeholder {
-    color: #666;
-    opacity: 1;
-  }
+  font-family: "FontAwesome";
+  src: url("../fonts/FontAwesome.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/FontAwesome.otf") format("opentype"),
+    url("../fonts/FontAwesome.woff") format("woff"),
+    url("../fonts/FontAwesome.woff2") format("woff2"),
+    url("../fonts/FontAwesome.ttf") format("truetype"),
+    url("../fonts/FontAwesome.svg#FontAwesome") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+tt,
+var,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  font: 14px/18px Arial, Tahoma, sans-serif;
+  background: #fff;
+}
+ol,
+ul {
+  list-style: none;
+}
+b,
+strong {
+  font-weight: bolder;
+}
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+img {
+  border-style: none;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+a,
+a:hover {
+  text-decoration: none;
+  background-color: transparent;
+}
+::-webkit-input-placeholder {
+  color: #666;
+  opacity: 1;
+}
+:-moz-placeholder {
+  color: #666;
+  opacity: 1;
+}
+::-moz-placeholder {
+  color: #666;
+  opacity: 1;
+}
+:-ms-input-placeholder {
+  color: #666;
+  opacity: 1;
+}
+.container {
+  position: relative;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.tc {
+  text-align: center;
+}
+.tr {
+  text-align: right;
+}
+.tl {
+  text-align: left;
+}
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  -ms-appearance: textfield;
+  -o-appearance: textfield;
+  appearance: textfield;
+}
+input[type="search"] {
+  box-sizing: border-box !important;
+}
+
+body.overflow-hidden {
+  overflow: hidden;
+}
+
+@media (min-width: 768px) {
   .container {
-    position: relative;
-    padding: 0 15px;
-    margin: 0 auto;
+    width: 750px;
   }
-  .fr {
-    float: right;
-  }
-  .fl {
-    float: left;
-  }
-  .tc {
-    text-align: center;
-  }
-  .tr {
-    text-align: right;
-  }
-  .tl {
-    text-align: left;
-  }
-  .img-responsive {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
-    margin: 0;
-  }
-  input[type="number"] {
-    -webkit-appearance: textfield;
-    -moz-appearance: textfield;
-    -ms-appearance: textfield;
-    -o-appearance: textfield;
-    appearance: textfield;
-  }
-  input[type="search"] {
-    box-sizing: border-box !important;
-  }
-  /*
-        -webkit-transform: translate(-50%, -50%);
-           -moz-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-             -o-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-    */
-  
-  /*
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        box-sizing: border-box;
-        align-items: center;
-    
-        -webkit-box-flex: 1;
-        -webkit-flex: 1;
-        -ms-flex: 1;
-        flex: 1;
-        -webkit-order: 2;
-        -ms-flex-order: 2;
-        order: 2;
-        -webkit-box-ordinal-group: 2;
-        box-ordinal-group: 2;
-     */
-  
-  /*
-        -webkit-transition: all 0.4s ease-in-out;
-           -moz-transition: all 0.4s ease-in-out;
-            -ms-transition: all 0.4s ease-in-out;
-             -o-transition: all 0.4s ease-in-out;
-                transition: all 0.4s ease-in-out;
-    */
-  
-  body.overflow-hidden {
-    overflow: hidden;
-  }
-  
-  .bg_body {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 110;
-    opacity: 0.5;
-    background-color: #000;
-  }
+}
+@media (min-width: 992px) {
   .container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 970px;
   }
-  @media (min-width: 768px) {
-    .container {
-      width: 750px;
-    }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
   }
-  @media (min-width: 992px) {
-    .container {
-      width: 970px;
-    }
-  }
-  @media (min-width: 1200px) {
-    .container {
-      width: 1170px;
-    }
-  }
+}
