--- a/githome/css/style.css
+++ b/githome/css/style.css
@@ -1,104 +1,74 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,900&display=swap");
+
 .container {
-  background: url(../img/back.png) no-repeat center;
-  /* height: 900px; */
+  width: 1230px;
 }
 
-header::after {
-  content: "";
-  background: url(../img/back.png);
-  width: 1366px;
-  height: 737px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* * {
-  margin: 0 auto;
-  list-style: none;
-  text-decoration: none;
-  padding: 0px;
-}
-
-body {
-  background-color: #eae7e3;
-}
-
-#header_wrap {
-  width: 100%;
-  background: linear-gradient(to top, #97b2ec, #debc84);
-  border: 1px solid;
-  padding: 10px 0 10px 0;
-}
-
-header {
+.navigation {
   display: flex;
-  flex-direction: column;
-  width: 60%;
+  justify-content: space-between;
+  padding-top: 30px;
+  align-items: center;
 }
 
-header p {
-  margin-top: 10px;
-  font-size: 30px;
-}
-
-#forkme_banner {
-  padding: 10px 50px 10px 10px;
-  color: #fff;
-  background: url(/githome/img/blacktocat.png) #f56969 no-repeat 95% 50%;
-  font-weight: 700;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-  margin-right: 0%;
-}
-
-#nav_wrap {
-  padding: 20px;
-}
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.nav_wrap_list {
-  background-color: #eaf9f4;
-  border: 1px solid;
-  margin: 10px;
-  padding: 30px;
-}
-
-.nav_wrap_list a {
-  font-size: 25px;
+.logo a:first-child {
+  font: 900 40px "Roboto";
   color: black;
+  display: block;
+  text-align: center;
 }
 
-.nav_wrap_list a:hover {
-  color: rgb(121, 199, 43);
-  text-decoration: underline;
+.logo a:first-child span {
+  font-weight: 300;
 }
 
-.nav_wrap_list_border {
-  background-color: #eaf9f4;
-  padding: 100px;
+.logo a:last-child {
+  font: 900 40px "Roboto";
+  color: black;
+  display: block;
+  text-align: center;
 }
 
-.nav_wrap_list:hover {
-  background: linear-gradient(to top, #97b2ec, #debc84);
+.logo a:last-child span {
+  font-weight: 300;
 }
 
-.nav_wrap_list_border:hover {
-  border: 1px solid;
-} */
+.logo hr {
+  margin: 20px 0;
+  background: chartreuse;
+  height: 4px;
+  border: 0;
+}
+
+.menu {
+  width: 70%;
+}
+
+.menu_items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu_items li {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.menu_items li a {
+  font: 400 20px "Open Sans";
+  color: goldenrod;
+  text-align: center;
+  transition: all 200ms linear;
+}
+
+.menu_items li hr {
+  margin: 15px;
+  border: 0;
+  height: 3px;
+  background: chartreuse;
+}
+
+.menu_items li a:hover {
+  color: chartreuse;
+  /* font-size: 30px; */
+}
