--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -61,29 +61,38 @@ font-family: "Roboto", sans-serif;
 .headline {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-bottom: 60px;
 }
 
-.headline:nth-last-of-type(2) {
+/* .headline:nth-of-type(3) {
   margin-bottom: 40px;
-}
-
-.headline h3 {
-  font: 24px "Kaushan Script";
-  color: rgb(51, 51, 51);
-  line-height: 1.2;
-  margin-bottom: 20px;
-}
+} */
 
 .headline h2 {
-  font: 700 30px "Montserrat";
+  font: 24px "Kaushan Script";
   color: rgb(51, 51, 51);
-  text-transform: uppercase;
   line-height: 1.2;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.headline span {
+  font: 700 30px "Montserrat";
+  color: rgb(51, 51, 51);
+  text-transform: uppercase;
+  line-height: 1.2;
+  padding: 15px 0 40px;
+}
+
+.headline p {
+  font: 400 15px "Roboto";
+  color: rgb(153, 153, 153);
+  line-height: 1.6;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 40px 0;
 }
 
 .headline h2::after {
@@ -91,7 +100,6 @@ font-family: "Roboto", sans-serif;
   background-color: rgb(243, 129, 129);
   width: 60px;
   height: 3px;
-  margin-top: 40px;
 }
 
 .services_wrap {
@@ -112,7 +120,7 @@ font-family: "Roboto", sans-serif;
 }
 
 .services-item img {
-  width: 32px;
+  width: auto;
   height: 32px;
   margin-right: 27px;
 }
@@ -130,12 +138,169 @@ font-family: "Roboto", sans-serif;
   line-height: 1.6;
 }
 
-.headline-text {
-  font: 400 15px "Roboto";
-  color: rgb(153, 153, 153);
-  line-height: 1.6;
-  text-align: center;
-  text-align: center;
-  width: 80%;
-  margin: 0 auto 80px;
+.teams {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+.teams_items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.teams_image-box {
+  position: relative;
+  transition: all 200ms linear;
+}
+
+.teams_image-box:hover {
+  box-shadow: 10px 10px 0px 0px rgba(149, 225, 211, 1);
+  transform: translate(-10px, -10px);
+}
+
+.teams_image-box:hover .teams_shadow-box {
+  display: block;
+}
+
+.teams_shadow-box {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 200ms linear;
+}
+
+.teams_shadow-box::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, #fce38a 0%, #f38181 100%);
+  opacity: 0.9;
+  z-index: 1;
+}
+
+.social_media {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  display: flex;
+}
+
+.social_media a {
+  background-color: rgb(252, 227, 138);
+  width: 56px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1px;
+  transition: all 200ms linear;
+}
+
+.social_media a:last-child {
+  margin-right: 0;
+}
+
+.social_media a:hover {
+  background-color: #95e1d3;
+}
+
+.facebook-icon {
+  background: url(../img/facebook.png) no-repeat;
+  width: 13px;
+  height: 26px;
+  display: block;
+}
+
+.twitter-icon {
+  background: url(../img/twitter.png) no-repeat;
+  width: 26px;
+  height: 22px;
+  display: block;
+}
+.pinterest-icon {
+  background: url(../img/pinterest.png) no-repeat;
+  width: 21px;
+  height: 26px;
+  display: block;
+}
+.instagram-icon {
+  background: url(../img/instagram.png) no-repeat;
+  width: 26px;
+  height: 26px;
+  display: block;
+}
+
+.teams_items h3 {
+  font: 400 14px "Montserrat";
+  text-transform: uppercase;
+  color: #333333;
+  padding: 25px 0 10px;
+}
+
+.teams_items h4 {
+  font: 300 15px/24px "Roboto";
+  color: #999999;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+footer hr {
+  width: 1201px;
+  height: 1px;
+  background-color: #e5e5e5;
+  border: 0;
+}
+
+footer p {
+  font: 400 14px "Montserrat";
+  color: #333333;
+}
+
+footer p a {
+  color: #f38181;
+}
+
+footer form {
+  padding: 10px 0 12px;
+  font-size: 0;
+}
+
+footer input[type="text"] {
+  width: 230px;
+  height: 40px;
+  background-color: #ffffff;
+  border: 1px solid #e7e7e7;
+  vertical-align: top;
+  font-size: 15px;
+  padding-left: 12px;
+}
+
+footer input[type="text"]::placeholder {
+  font: 300 15px/24px "Roboto";
+  font-style: italic;
+  color: #cccccc;
+}
+
+footer input[type="button"] {
+  background-color: rgb(149, 225, 211);
+  font: 700 14px "Montserrat";
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 11px 30px;
+  border: 0 solid;
+  cursor: pointer;
+  vertical-align: top;
 }
