--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -1,87 +1,116 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap");
 
 /* Mobile css */
 
 .container {
-    min-width: 320px;
+  min-width: 320px;
 }
 
 header {
-    background: url(../img/background_mobile.png) no-repeat center;
-    height: 540px;
+  background: url(../img/background_mobile.png) no-repeat center;
+  height: 540px;
+  margin-bottom: 70px;
 }
 
 .navigation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
 }
 
 .menu {
-    display: flex;
-    margin-bottom: 110px;
+  display: flex;
+  margin-bottom: 110px;
 }
 
 .menu-item {
-    width: 90px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
+  width: 90px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
 
 .menu-item:hover {
-    border: 2.0px solid #ffffff;
+  border: 2px solid #ffffff;
 }
 
 .menu-item a {
-    font: 700 14px "Montserrat";
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
+  font: 700 14px "Montserrat";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
 }
 
 .logo {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 .logo a {
-    font: 700 20px "Montserrat";
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-}
-
-header h1 {
-    font: 700 30px "Montserrat";
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-    text-transform: uppercase;
-    text-align: center;
-    width: 300px;  
-    margin-bottom: 8px;
+  font: 700 20px "Montserrat";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
 }
 
 header h2 {
-    font: 300 18px "Roboto";
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-    text-transform: none;
-    width: 75%;
-    text-align: center;
-    margin: 0 auto 15px;
+  font: 700 30px "Montserrat";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  width: 300px;
+  margin: 0 auto 8px;
+}
+
+header h3 {
+  font: 300 18px "Roboto";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-transform: none;
+  width: 75%;
+  text-align: center;
+  margin: 0 auto 15px;
 }
 
 .button {
-    font: 700 14px "Montserrat";
-    color: #ffffff;
-    width: 280px;
-    height: 40px;
-    background-color: #ff4e50;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    margin: 0 auto;
+  font: 700 14px "Montserrat";
+  color: #ffffff;
+  width: 280px;
+  height: 40px;
+  background-color: #ff4e50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  margin: 0 auto;
 }
-  
+
+.content {
+    display: flex;
+    flex-direction: column;
+}
+
+.content h2 {
+    font: 700 22px "Montserrat";
+    color: #333333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.partners_wrap-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.partners_wrap-item h3 {
+    font: 700 14px "Montserrat";
+    color: #333333;
+}
+
+.partners_wrap-item h4 {
+    font: 300 14px "Roboto";
+    color: #666666;
+    text-align: center;
+}
