--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -3,19 +3,22 @@
 
 .container {
   min-width: 320px;
+  max-width: 940px;
+  margin: 0 auto;
 }
 
 header {
-  background: url(../img/background_mobile.png) no-repeat center;
+  background: url(../img/background_mobile.png) no-repeat center #333333;
   height: 540px;
   margin-bottom: 70px;
+  background-size: cover;
 }
 
 .navigation {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 20px;
+  padding: 4% 0 0 0;
 }
 
 .menu {
@@ -30,10 +33,13 @@ header {
   justify-content: center;
   align-items: center;
   border-radius: 20px;
+  border: 2px solid rgb(255, 255, 255, 0);
+  transition: 0.2s linear;
 }
 
 .menu-item:hover {
-  border: 2px solid #ffffff;
+  border: 2px solid rgb(255, 255, 255);
+  transition: 0.2s linear;
 }
 
 .menu-item a {
@@ -58,8 +64,8 @@ header h2 {
   line-height: 1.2;
   text-transform: uppercase;
   text-align: center;
-  width: 300px;
-  margin: 0 auto 8px;
+  width: 80%;
+  margin: 0 auto 3%;
 }
 
 header h3 {
@@ -69,7 +75,7 @@ header h3 {
   text-transform: none;
   width: 75%;
   text-align: center;
-  margin: 0 auto 15px;
+  margin: 0 auto 4%;
 }
 
 .button1 {
@@ -83,11 +89,17 @@ header h3 {
   align-items: center;
   border-radius: 20px;
   margin: 0 auto;
+  transition: all 200ms linear;
+}
+
+.button1:hover {
+  background-color: #df6d6f;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .content h2 {
@@ -97,12 +109,18 @@ header h3 {
   margin-bottom: 20px;
 }
 
+.partners_wrap {
+  display: flex;
+  flex-flow: row wrap;
+  width: 67%;
+}
+
 .partners_wrap-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto 25px;
-  width: 220px;
+  margin: 0 auto;
+  width: 217px;
 }
 
 .person_img {
@@ -119,6 +137,7 @@ header h3 {
   border-radius: 20px;
   right: 0;
   bottom: 0;
+  transition: all 200ms linear;
 }
 
 .person_img:hover::before {
@@ -151,6 +170,7 @@ header h3 {
   font: 300 14px "Roboto";
   color: #666666;
   text-align: center;
+  margin-bottom: 15%;
 }
 
 .button2 {
@@ -166,13 +186,68 @@ header h3 {
   margin: 0 auto;
   background-color: #ffffff;
   border: 2.0px solid #ff4e50;
-  margin-bottom: 55px;
+  margin-bottom: 40px;
+  transition: all 200ms linear;
+}
+
+.button2:hover {
+  background-color: #ff4e50;
+  color: #ffffff;
 }
 
 /* Tablet css */
 
-@media (min-width:320px) {
+@media (min-width:321px) {
   header {
-    background: url(../img/background_tablet.png) no-repeat center;
+    background: url(../img/background_tablet.png) no-repeat center #333333;
+    background-size: cover;
+  }
+}
+
+@media (min-width:768px) {
+  header {
+    height: 700px;
+  }
+  .navigation {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 150px;
+    /* padding: 45px 50px 0; */
+  }
+  .menu {
+    margin: 0;
+    padding-right: 50px;
+  }
+  .logo {
+    margin: 0;
+    padding-left: 50px;
+  }
+  header h2 {
+    font-size: 52px;
+  }
+  header h3 {
+    font-size: 24px;
+  }
+}
+
+/* Desktop css */
+
+@media (min-width:769px) {
+  header {
+    background: url(../img/background_desktop.png) no-repeat center #333333;
+    background-size: cover;
+  }
+}
+
+@media (min-width:1440px) {
+  .menu {
+    padding-right: 0;
+  }
+  .logo {
+    padding-left: 0;
+  }
+  .partners_wrap {
+    width: 100%;
   }
 }
