--- a/html-css/module-10/css/style.css
+++ b/html-css/module-10/css/style.css
@@ -2,17 +2,31 @@
 
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300,400&display=swap');
 
-/* ----- Fonts ----- */
-
-/* 
-font-family: 'Kaushan Script', cursive;
-font-family: 'Roboto', sans-serif;
-font-family: 'Montserrat', sans-serif; 
-*/
-
 header {
     background: url(../img/bg.png) center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     margin-bottom: 20px;
+    position: relative;
+    height: 1000px;
+}
+
+header::after {
+    content: "";
+    background-image: -moz-linear-gradient(90deg, rgb(252, 227, 138, .9) 0%, rgb(243, 129, 129, .9) 100%);
+    background-image: -webkit-linear-gradient(90deg, rgb(252, 227, 138, .9) 0%, rgb(243, 129, 129, .9) 100%);
+    background-image: -ms-linear-gradient(90deg, rgb(252, 227, 138, .9) 0%, rgb(243, 129, 129, .9) 100%);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+}
+
+header .container {
+    z-index: 3;
+    position: sticky;
 }
 
 @media (-webkit-min-device-pixel-ratio:2),
@@ -20,12 +34,13 @@ header {
 (min-resolution:2dppx) {
     header {
         background: url(../img/bg@2x.png) center no-repeat;
+        -webkit-background-size: cover;
+        background-size: cover;
     }
 }
 
 .container {
     max-width: 1231px;
-    height: 1000px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
